<resources>    <string name="app_name">planeteTP5</string>    <string name="creer_activite">Créer une activité : </string>    <string name="activite_titre">Titre </string>    <string name="activite_description">Description </string>    <string name="activite_duree">Durée en heures</string>    <string name="structure">Structure</string>    <string name="ajouter_activite">Ajouter une activité</string>    <string name="creer_parcours">Créer un parcours</string>    <string name="parcours_nom">Nom</string>    <string name="parcours_description">Description</string>    <string name="parcours_categorie">Catégorie</string>    <string name="ajouter_parcours">Ajouter un parcours</string>    <string name="creer_seance">Créer une séance</string>    <string name="seance_date">Date de la séance</string>    <string name="seance_duree">Durée de la séance</string>    <string name="ajouter_seance">Ajouter une séance</string>    <string name="ajouter_structure">Ajouter une structure</string>    <string name="structure_nom">Nom</string>    <string name="structure_discipline">Discipline</string>    <string name="structure_pathologies">Liste des pathologies</string>    <string name="patient_nom">Nom</string>    <string name="patient_prenom">Prénom</string>    <string name="patient_pathologie">Pathologie</string>    <string name="seance_de">Séance</string>    <string name="activite">Activité</string>    <string name="heures">heures</string>    <string name="calendar">Calendrier</string></resources>