<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="#F0E68C"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcours_nom"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/parcours_nom"/>

            <TextView
                android:id="@+id/parcours_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/parcours_categorie"
                android:text="@string/parcours_description"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/parcours_categorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/parcours_nom"
                android:text="@string/parcours_categorie"
                android:textColor="@color/black"
                android:textSize="18dp" />




        </RelativeLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>